selinux policy fixes

--- a/templates/.pgpass.j2
+++ b/templates/.pgpass.j2
@@ -1,1 +1,1 @@
-*:'{{ pg_cfg_srv_listen_port }}':'{{ zbx_dbname }}':'{{ zbx_user }}':'{{ zbx_passwd }}'
+*:'{{ pg_cfg_srv_listen_port }}':'{{ zbx_server_DBName }}':'{{ zbx_server_DBUser }}':'{{ zbx_server_DBPassword }}'
