--- a/templates/zabbix.conf.j2
+++ b/templates/zabbix.conf.j2
@@ -1,4 +1,3 @@
-#{{ ansible_managed }}
 #
 # Zabbix monitoring system php web frontend
 #
@@ -11,12 +10,12 @@ Alias /zabbix /usr/share/zabbix
     Order allow,deny
     Allow from all
 
-    php_value max_execution_time {{ zbx_php_max_execution }}
-    php_value memory_limit {{ zbx_php_memory_limit }}
-    php_value post_max_size {{ zbx_php_post_max_size }}
-    php_value upload_max_filesize {{ zbx_php_upload_max_filesize }}
-    php_value max_input_time {{ zbx_php_max_input_time }}
-    php_value date.timezone {{ zbx_php_timezone }}
+    php_value max_execution_time 300
+    php_value memory_limit 128M
+    php_value post_max_size 16M
+    php_value upload_max_filesize 2M
+    php_value max_input_time 300
+    php_value date.timezone Europe/Brussels
 </Directory>
 
 <Directory "/usr/share/zabbix/conf">
