--- a/templates/zabbix.repo.j2
+++ b/templates/zabbix.repo.j2
@@ -1,3 +1,4 @@
+#{{ ansible_managed }}
 [zabbix]
 name=Zabbix Official Repository - $basearch
 baseurl=http://repo.zabbix.com/zabbix/2.2/rhel/6/$basearch/
@@ -6,7 +7,7 @@ gpgcheck=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-ZABBIX
 
 [zabbix-non-supported]
-name=Zabbix Official Repository non-supported - $basearch 
+name=Zabbix Official Repository non-supported - $basearch
 baseurl=http://repo.zabbix.com/non-supported/rhel/6/$basearch/
 enabled=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-ZABBIX
