Zabbix server updated for thel 7

--- a/templates/zabbix.conf2.php.j2
+++ b/templates/zabbix.conf2.php.j2
@@ -2,7 +2,7 @@
 // Zabbix GUI configuration file
 global $DB;
 
-$DB['TYPE']     = 'MYSQL';
+$DB['TYPE']     = 'POSTGRESQL';
 {% if zbx_server_DBHost %}}
 $DB['SERVER']   = '{{zbx_server_DBHost}}';
 {% else %}
