--- a/templates/zabbix_server.conf.j2
+++ b/templates/zabbix_server.conf.j2
@@ -1,14 +1,4 @@
 #{{ ansible_managed }}
-############ GENERAL PARAMETERS #################
-
-### Option: NodeID
-#	Unique NodeID in distributed setup.
-#	0 - standalone server
-#
-# Mandatory: no
-# Range: 0-999
-# Default:
-NodeID={{zbx_server_NodeID}}
 
 ### Option: ListenPort
 #	Listen port for trapper.
@@ -397,24 +387,6 @@ HistoryTextCacheSize={{zbx_server_HistoryTextCacheSize}}
 # Default:
 ValueCacheSize={{zbx_server_ValueCacheSize}}
 
-### Option: NodeNoEvents
-#	If set to '1' local events won't be sent to master node.
-#	This won't impact ability of this node to propagate events from its child nodes.
-#
-# Mandatory: no
-# Range: 0-1
-# Default:
-NodeNoEvents={{zbx_server_NodeNoEvents}}
-
-### Option: NodeNoHistory
-#	If set to '1' local history won't be sent to master node.
-#	This won't impact ability of this node to propagate history from its child nodes.
-#
-# Mandatory: no
-# Range: 0-1
-# Default:
-NodeNoHistory={{zbx_server_NodeNoHistory}}
-
 ### Option: Timeout
 #	Specifies how long we wait for agent, SNMP device or external check (in seconds).
 #
@@ -556,6 +528,15 @@ ProxyDataFrequency={{zbx_server_ProxyDataFrequency}}
 # Default:
 AllowRoot={{zbx_server_AllowRoot}}
 
+## Option: User
+#  Drop privileges to a specific, existing user on the system.
+#  Only has effect if run as 'root' and AllowRoot is disabled.
+#
+# Mandatory: no
+# Default:
+# User=zabbix
+
+
 ### Option: Include
 #	You may include individual files or all files in a directory in the configuration file.
 #	Installing Zabbix will create include directory in /usr/local/etc, unless modified during the compile time.
@@ -570,6 +551,32 @@ Include={line}
 
 # Include=/usr/local/etc/zabbix_server.general.conf
 # Include=/usr/local/etc/zabbix_server.conf.d/
+
+## Option: SSLCertLocation
+#  Location of SSL client certificates.
+#  This parameter is used only in web monitoring.
+#
+# Mandatory: no
+# Default:
+# SSLCertLocation=${datadir}/zabbix/ssl/certs
+
+### Option: SSLKeyLocation
+#  Location of private keys for SSL client certificates.
+#  This parameter is used only in web monitoring.
+#
+# Mandatory: no
+# Default:
+# SSLKeyLocation=${datadir}/zabbix/ssl/keys
+
+### Option: SSLCALocation
+#  Override the location of certificate authority (CA) files for SSL server certificate verification.
+#  If not set, system-wide directory will be used.
+#  This parameter is used only in web monitoring.
+#
+# Mandatory: no
+# Default:
+# SSLCALocation=
+
 
 ####### LOADABLE MODULES #######
 
